# csagv_foxy

install/: local_setup.sh  setup.sh
install/lidar_node/lib/lidar_node/: lidar_node
install/lidar_node/share/ament_index/resource_index/parent_prefix_path/: lidar_node
install/lidar_node/share/lidar_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nmpc_node/lib/nmpc_node/: nmpc_node
install/nmpc_node/share/nmpc_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: Prova.cpp
src/lidar_node/: CMakeLists.txt
src/lidar_node/src/: lidar_node.cpp
src/nmpc_node/: package.xml  setup.cfg  setup.py
src/nmpc_node/nmpc_node/: nmpc_code.py
test_node/: package.xml
