<package format="3">
  <name>nmpc_node</name>
  <version>0.1.0</version>
  <description>NMPC node in Python</description>
  <maintainer email="tuoemail@example.com">Il Tuo Nome</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
</package>
