<package format="3">
  <name>nmpc_node</name>
  <version>0.1.0</version>
  <description>NMPC node in Python</description>
  <maintainer email="tuoemail@example.com">Il Tuo Nome</maintainer>
  <license>Apache 2.0</license>

  <depend>ament_python</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  
</package>
